Adding another inline element SPAN

--- a/form.html
+++ b/form.html
@@ -26,6 +26,9 @@
                             First Name:
                         </label>
                         <input type="text" name="firstName" id="firstName">
+                        <span>
+                            This will come to the right of the first name box
+                        </span>
                     </div>
                     <div>
                         <label for="lastName">
